# CarConnectivity-plugin-mqtt

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup_requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_and_publish-docker-edge.yml  build_and_publish-docker.yml  build_and_publish.yml  publish_dockerhub-description.yml  smoketest-docker-compose.yml
autostart/systemd/: README.md  carconnectivity-mqtt.service  carconnectivitymqtt.service
doc/: Config.md
docker/: Dockerfile  Dockerfile-edge  README.md  entrypoint.sh
docker/test/: carconnectivity.json  docker-compose.yml
src/carconnectivity_mqtt/: carconnectivity_mqtt_base.py
src/carconnectivity_plugins/mqtt/: mqtt_client.py  plugin.py
src/carconnectivity_plugins/mqtt/ui/: plugin_ui.py
src/carconnectivity_plugins/mqtt/ui/templates/: status.html
src/carconnectivity_plugins/mqtt/ui/templates/mqtt/: status.html
test/integration_test/: carConnectivity.json
