[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "carconnectivity-plugin-mqtt"
description = "CarConnectivity plugin for publishing data to MQTT"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [
    { name = "Till Steinbach" }
]
dependencies = [
    "carconnectivity>=0.11.3",
    "paho-mqtt~=2.1.0",
    "python-dateutil~=2.9.0"
]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: System :: Monitoring",
    "Topic :: Home Automation"
]

[project.optional-dependencies]
connectors = [
    'carconnectivity-connector-volkswagen>=0.10',
    'carconnectivity-connector-skoda>=0.11',
    'carconnectivity-connector-seatcupra>=0.5',
    'carconnectivity-connector-tronity>=0.7',
]
plugins = [
    'carconnectivity-plugin-mqtt>=0.9',
    'carconnectivity-plugin-mqtt_homeassistant>=0.5',
    'carconnectivity-plugin-abrp>=0.8',
    'carconnectivity-plugin-homekit>=0.7',
    'carconnectivity-plugin-webui>=0.6',
    'carconnectivity-plugin-database>=0.1',
]
homeassistant = [
    'carconnectivity-plugin-mqtt_homeassistant>=0.5',
]
all = [
    'carconnectivity-plugin-mqtt[connectors,plugins]',
]

[project.urls]

[project.scripts]
carconnectivity-mqtt = "carconnectivity_mqtt.carconnectivity_mqtt_base:main"

[tool.setuptools_scm]
write_to = "src/carconnectivity_plugins/mqtt/_version.py"

[tool.pylint.format]
max-line-length = 160
ignore-patterns= "_version.py"

[tool.bandit]
targets = "carconnectivity_mqtt, carconnectivity_plugins"